--- a/cssCode/mainStyle.css
+++ b/cssCode/mainStyle.css
@@ -287,15 +287,15 @@
 
 .outerCheckboxaajtak{
 	color:rgb(105,105,105);
-	height:25px;
-	width:25px;
+	height:30px;
+	width:30px;
 	border:3px solid gray;
 	background:gray;
-	border-radius:5px;
+	border-radius:50%;
 	box-shadow:2px 2px 2px silver;
 	position:relative;
 	transition:all .2s;
-	cursor:hand;
+	cursor:pointer;
 	margin:2px;    	
 	display:flex;
 	justify-content:center;
